Closed Bug 1800826 Opened 1 year ago Closed 1 year ago

JS demo (https://js1k.com/2016-elemental/demo/2481) leaves traces of the green forest outside of the box when panning with direction keys

Categories

(Core :: Graphics: Canvas2D, defect)

defect

Tracking

()

VERIFIED FIXED
109 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox107 --- unaffected
firefox108 --- verified
firefox109 --- verified

People

(Reporter: mayankleoboy1, Assigned: lsalzman)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

enable gpu-canvas
go to :https://js1k.com/2016-elemental/demo/2481
use the direction keys on the keyboard to move around the green forest

AR: parts of the green forest outside the box will leave permanent traces
ER: not so

Regression:
Bug 1799069 - Preserve buffer provider on same size canvas resets. r=aosmond
Differential Revision: https://phabricator.services.mozilla.com/D161615

Flags: needinfo?(lsalzman)
Regressed by: 1799069

Set release status flags based on info from the regressing bug 1799069

Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Flags: needinfo?(lsalzman)
Duplicate of this bug: 1800807
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6ce51647918f
Remove all clips when reusing a target in Canvas2D. r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch

The patch landed in nightly and beta is affected.
:lsalzman, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox108 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(lsalzman)

This is fixed on latest Nightly. Thanks!

Flags: needinfo?(lsalzman)

Comment on attachment 9303764 [details]
Bug 1800826 - Remove all clips when reusing a target in Canvas2D. r?aosmond

Beta/Release Uplift Approval Request

  • User impact if declined: Visual artifacts/improper rendering in Canvas2D
  • Is this code covered by automated tests?: Unknown
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Just ensures DrawTargets' clips are properly reset before reuse. Verified by reporter.
  • String changes made/needed:
  • Is Android affected?: Yes
Attachment #9303764 - Flags: approval-mozilla-beta?

Comment on attachment 9303764 [details]
Bug 1800826 - Remove all clips when reusing a target in Canvas2D. r?aosmond

Approved for 108.0b4

Attachment #9303764 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Reproduced the issue with Firefox 109.0a1 (2022-11-15) on macOS 13.0.1 by using the info provided in Comment 0.

The issue is fixed on Firefox 108.0b4 and Firefox 109.0a1 (2022-11-20). Tests were performed on macOS 13.0.1, Ubuntu 22.04 and Windows 11.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: