Bug 1800826 - Remove all clips when reusing a target in Canvas2D. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D162237