gfx/2d/DrawTargetSkia.h
@@ -108,6 +108,7 @@ class DrawTargetSkia : public DrawTarget {
   virtual void PushDeviceSpaceClipRects(const IntRect* aRects,
                                         uint32_t aCount) override;
   virtual void PopClip() override;
+  virtual bool RemoveAllClips() override;
   virtual void PushLayer(bool aOpaque, Float aOpacity, SourceSurface* aMask,
                          const Matrix& aMaskTransform,
                          const IntRect& aBounds = IntRect(),
